--- a/Application/Admin/View/Album/oneAlbum.html
+++ b/Application/Admin/View/Album/oneAlbum.html
@@ -94,7 +94,7 @@
                     <nav class="Hui-breadcrumb">
                         <a class="maincolor" href="<{:U('Line/oneAlbum')}>?box_id=<{$box_id}>">根节点</a>
                         <volist name="tree" id="treeData">
-                            <a href="<{:U('Line/oneAlbum')}>?id=<{$treeData.id}>&box_id=<{$box_id}>">
+                            <a href="<{:U('Album/oneAlbum')}>?id=<{$treeData.id}>&box_id=<{$box_id}>">
                                 <span class="c-666">&gt;</span><{$treeData.title}>
                             </a>
                         </volist>
@@ -116,7 +116,7 @@
                     <div id="album-no-<{$data.id}>" class="f-l mt-20 ml-20 <if condition="($data['leaf'] eq 0)">album</if>" >
 
                         <if condition="($data['leaf'] eq 0)">
-                            <a href="<{:U('Line/oneAlbum')}>?id=<{$data.id}>&box_id=<{$box_id}>">
+                            <a href="<{:U('Album/oneAlbum')}>?id=<{$data.id}>&box_id=<{$box_id}>">
                                 <img src="__PUBLIC__/Admin/imge/6.png"  alt="<{$data.title}>" class="al-imge">
                             </a>
                             <else />
