--- a/Application/Admin/View/Album/index.html
+++ b/Application/Admin/View/Album/index.html
@@ -212,7 +212,7 @@
             layer.close(prompt);
             $.get("<{:U('Album/addAlbum')}>", { title: name, parent_id: parent_id },
                     function(data){
-                        var htmlAlbum='<div class="f-l mt-20 ml-20 album"> <a href="<{:U("Album/index")}>/id/'+data.id+'"><img src="__PUBLIC__/Admin/imge/6.png" alt="'+data.title+'" class="al-imge"></a><ul class="row cl mt-5 ml-5 al-msg" ><li class="f-l"><input type="checkbox" value="'+data.id+'"></li><li class="f-l"><p class="text-overflow al-name" >&nbsp&nbsp'+data.title+'</p></li></ul><ul class="row cl ml-15 text-c al-xiaocaozuo"><div class="btn-group row text-c"><span class="btn  radius" ><i class="Hui-iconfont">&#xe6df;</i>编辑</span><span class="btn  radius"><i class="Hui-iconfont">&#xe60b;</i>删除</span><span class="btn  radius"><i class="Hui-iconfont">&#xe6ab;</i>移动</span></div></ul></div>'
+                        var htmlAlbum='<div class="f-l mt-20 ml-20 album"> <a href="<{:U("Album/index")}>?id='+data.id+'"><img src="__PUBLIC__/Admin/imge/6.png" alt="'+data.title+'" class="al-imge"></a><ul class="row cl mt-5 ml-5 al-msg" ><li class="f-l"><input type="checkbox" value="'+data.id+'"></li><li class="f-l"><p class="text-overflow al-name" >&nbsp&nbsp'+data.title+'</p></li></ul><ul class="row cl ml-15 text-c al-xiaocaozuo"><div class="btn-group row text-c"><span class="btn  radius" ><i class="Hui-iconfont">&#xe6df;</i>编辑</span><span class="btn  radius"><i class="Hui-iconfont">&#xe60b;</i>删除</span><span class="btn  radius"><i class="Hui-iconfont">&#xe6ab;</i>移动</span></div></ul></div>'
                         $('.album').last().after(htmlAlbum);
 
                     });
